--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </style>
 </head>
 <body>
+  <div id="container">
   <div class="wrapper">
    <section class="section1">
      <h1>Join our community</h1>
@@ -49,7 +50,7 @@
     </p>
   </footer>
   </div>
-  
+</div>
 
  
 
